--- a/setting/MySymbolPicker.html
+++ b/setting/MySymbolPicker.html
@@ -1,4 +1,4 @@
-﻿<div style="width: 100%;">
+<div style="width: 100%;">
   <div data-dojo-attach-point="tabParent">
     <div data-dojo-attach-point="symbolPickerContainer" class="symbolPickerContainer">
       <div data-dojo-attach-point="div_symbolOptionsContainer" class="symbolOptionsContainer">
